# OpenSolar

./: .env.template  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CLAUDE.md.backup.20260211_070903  DEPLOY.md  GITHUB-PURGE-NOTICE.md  INSTALL-AGENT.md  LICENSE  Macmini-2-Macbook.sh  README.md  SELF_CHECK.md  SKILLS-INSTALL.md  SPRINTS-HIGHLIGHTS.md  STATE.md  TRIGGERS.md  USER-GUIDE.md  XIAOAI_CHECK.md  hooks.json  install-core.sh  install.sh  modes.md  niumao-anchors.json  package-lock.json  package.json  personality-anchor.txt  settings.json  settings.local.json  skills-index.md  stats-cache.json
.clawhub/: lock.json
.solar/: ARCH.md  DECISIONS.md  STATE.md  priorities.md  session.md  task-backlog.md
agents/: 00-base.md  architect.md  benchmark-reporter.md  benchmark-reporter.md.bak2  benchmark-reporter.md.bak3  benchmark-reporter.md.bak4  coder.md  coder.md.backup  community.md  dev.md  docs.md  evolver.md  guard.md  ops.md  pm.md  qa.md  reporter.md  researcher.md  reviewer.md  secretary.md  skill-market.md  test.md  tester.md  write.md
benchmarks/: mlx_quantization_bench.py
codex-bridge/: CODEX-PROTOCOL.md
core/: analyze-solar-needs.ts  auto-summarizer.ts  code-indexer.ts  code-search.ts  demo-dev-ui.ts  demo-persistent-ui.ts  failure-analyzer.ts  skill-indexer.ts  skill-layer-system.ts  skill-orchestrator.ts  skill-retriever.ts  skill-tree.yaml  test-agents.ts  test-call-agent.ts  test-call-quick.ts  test-e2e.ts  test-monitor.ts
modes/: dev.md  (+2 more)
solar/core/search/: Cargo.toml
solar/core/search/sql/: triggers.sql
solar/core/search/src/: schema.rs
(+4922 files in other folders)
