[package]
name = "solar-search"
version = "0.1.0"
edition = "2021"
description = "High-performance search engine for Solar OS"
authors = ["Solar <solar@localhost>"]

[dependencies]
# Search engine
tantivy = "0.22"

# Chinese tokenization
jieba-rs = "0.7"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Utils
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
